# tonatiuh

./: .gitignore  .project  README.md  UAV  index.html  params.json
TonatiuhProject/: .project  CMakeLists.txt  CreateVSProject.bat  TonatiuhProject.pro  config.pri  config_win.pri
TonatiuhProject/MaterialGeneric/: .cproject  .project  Makefile.Debug
TonatiuhProject/MaterialGeneric/debug/: moc_MaterialGenericFactory.cpp
TonatiuhProject/MaterialGeneric/release/: moc_MaterialGenericFactory.cpp
TonatiuhProject/MaterialGeneric/src/: MaterialGeneric.cpp  MaterialGeneric.h  MaterialGeneric.pro  MaterialGeneric.qrc
TonatiuhProject/PhotonMapDefault/src/: PhotonMapDefault.cpp  PhotonMapDefault.h  PhotonMapDefault.pro
TonatiuhProject/ShapeCone/src/: ShapeCone.cpp  ShapeCone.h  ShapeCone.pro  ShapeConeFactory.cpp
TonatiuhProject/ShapeCylinder/src/: ShapeCylinder.cpp  ShapeCylinder.h  ShapeCylinder.pro  ShapeCylinderFactory.cpp
TonatiuhProject/ShapeFlatDisk/src/: ShapeFlatDisk.cpp  ShapeFlatDisk.h  ShapeFlatDisk.pro  ShapeFlatDiskFactory.cpp  ShapeFlatDiskFactory.h
TonatiuhProject/ShapeFlatRectangle/src/: ShapeFlatRectangle.cpp  ShapeFlatRectangle.h  ShapeFlatRectangle.pro  ShapeFlatRectanguleFactory.cpp
TonatiuhProject/ShapeHyperboloid/src/: ShapeHyperboloid.cpp  ShapeHyperboloid.h  ShapeHyperboloid.pro
TonatiuhProject/ShapeParabolicDish/src/: ShapeParabolicDish.cpp  ShapeParabolicDish.h  ShapeParabolicDish.pro  ShapeParabolicDisk.qrc
TonatiuhProject/ShapeParabolicRectangle/src/: ShapeParabolicRectangle.cpp  ShapeParabolicRectangle.h  ShapeParabolicRectangle.pro  ShapeParabolicRectangleFactory.cpp
TonatiuhProject/ShapeSphere/src/: ShapeSphere.cpp  ShapeSphere.h  ShapeSphere.pro  ShapeSphereFactory.cpp
TonatiuhProject/ShapeSphericalPolygon/src/: ShapeSphericalPolygon.cpp  ShapeSphericalPolygon.h  ShapeSphericalPolygon.pro  ShapeSphericalPolygonFactory.cpp
TonatiuhProject/ShapeTroughParabola/src/: ShapeTroughParabola.cpp  ShapeTroughParabola.h  ShapeTroughParabola.pro  ShapeTroughParabolaFactory.cpp
TonatiuhProject/SunshapePillbox/src/: SunshapePillbox.cpp  SunshapePillbox.h  SunshapePillbox.pro  SunshapePillboxFactory.cpp
TonatiuhProject/Tonatiuh/: config.pri
TonatiuhProject/Tonatiuh/doc/: _action_insert_material_8cpp-source.html  _action_insert_material_8cpp.html  _action_insert_shape_8cpp-source.html  _action_insert_shape_8h.html  _action_insert_sun_shape_8cpp-source.html  _action_insert_sun_shape_8h.html  _action_insert_tracker_8cpp.html  _b_box_8cpp.html  _cmd_cut_8cpp.html  _cmd_cut_8h-source.html  _cmd_cut_8h.html  _cmd_delete_8h-source.html  _cmd_delete_tracker_8cpp.html  _cmd_delete_tracker_8h-source.html  _cmd_insert_shape_8h-source.html  _cmd_insert_shape_8h.html  _cmd_insert_tracker_8cpp.html  _cmd_insert_tracker_8h-source.html  _cmd_light_kit_modified_8cpp-source.html  _cmd_linght_position_modified_8cpp.html  _cmd_parameter_modified_8cpp.html  _cmd_parameter_modified_8h-source.html  _cmd_paste_8cpp-source.html  _cmd_paste_8h.html  _differential_geometry_8h.html  _document_8h.html  _field_container_widget_8cpp.html  _graphic_view_8cpp.html  _graphic_view_8h-source.html  _graphic_view_8h.html  _horizontal_widget_8cpp-source.html  _horizontal_widget_8cpp.html  _image_8cpp-source.html  _instance_node_8h-source.html  _main_window_8h-source.html  _map_dialog_8cpp.html  _map_dialog_8h.html  _matrix4x4_8cpp-source.html  _matrix4x4_8h-source.html  _node_name_delegate_8h-source.html  (+98 more)
TonatiuhProject/Tonatiuh/src/: ActionInsertMaterial.cpp  ActionInsertMaterial.h  ActionInsertShape.cpp  ActionInsertSunShape.cpp  ActionInsertSunShape.h  AnalyzerWindow.cpp  BBox.cpp  CelestialWidget.cpp  CelestialWidget.h  CmdCopy.h  CmdCut.cpp  CmdDelete.h  CmdDeleteTracker.cpp  CmdDeleteTracker.h  CmdInsertMaterial.cpp  CmdInsertMaterial.h  CmdInsertPhotonMap.cpp  CmdInsertSeparatorKit.cpp  CmdInsertSeparatorKit.h  CmdInsertShape.cpp  CmdInsertShape.h  CmdInsertShapeKit.cpp  CmdInsertTracker.cpp  CmdLightKitModified.cpp  CmdLightKitModified.h  CmdLightPositionModified.h  CmdLinghtPositionModified.cpp  CmdPaste.cpp  CmdPaste.h  DifferentialGeometry.h  Document.cpp  FieldContainerWidget.cpp  FieldContainerWidget.h  Flux.h  GraphicView.cpp  GraphicView.h  Image.cpp  Image.h  InstanceNode.cpp  InstanceNode.h  (+67 more)
TonatiuhProject/TrackerHorizontal/src/: TrackerHorizontal.pro  TrackerHorizontal.qrc  TrackerHorizontalFactory.cpp
TonatiuhProject/fields/: FieldEditor.h  UserMField.cpp  UserMField.h  UserSField.cpp  UserSField.h  fields.pro
TonatiuhProject/geometry/: BBox.cpp  BBox.h  Matrix4x4.cpp  Matrix4x4.h  NormalVector.cpp  NormalVector.h  Point3D.cpp  Point3D.h  Ptr.h  Ray.h  RefCount.cpp  RefCount.h  Transform.cpp  Transform.h  Vector3D.cpp  Vector3D.h  gc.h  gf.cpp  gf.h
TonatiuhProject/plugins/: Makefile  plugins.pro
TonatiuhProject/src/: ActionInsertMaterial.cpp  ActionInsertPhotonMap.cpp  ActionInsertPhotonMap.h  ActionInsertTracker.cpp  BBox.cpp  BBox.h  CmdCopy.cpp  CmdCut.cpp  CmdDelete.cpp  CmdDeleteTracker.cpp  CmdDeleteTracker.h  CmdInsertMaterial.cpp  CmdInsertShape.cpp  CmdInsertShape.h  CmdInsertShapeKit.cpp  CmdInsertShapeKit.h  CmdInsertTracker.cpp  CmdLightKitModified.cpp  CmdParameterModified.cpp  CmdPaste.cpp  DifferentialGeometry.cpp  DifferentialGeometry.h  Document.cpp  ExportDialog.cpp  ExportDialog.h  FieldContainerWidget.cpp  GraphicView.cpp  HorizontalWidget.cpp  InstanceNode.cpp  LightDialog.cpp  LightDialog.h  MainWindow.cpp  MainWindow.h  Makefile  Makefile.Release  Matrix2x2.cpp  Matrix2x2.h  Matrix4x4.cpp  Matrix4x4.h  MersenneTwister.cpp  (+50 more)
TonatiuhProject/tests/: BBoxTests.cpp  DifferentialGeometryTests.cpp  Makefile  Makefile.Debug  Matrix4x4Tests.cpp  NormalVectorTests.cpp  PhotonTests.cpp  Point3DTests.cpp  RayTests.cpp  RayTracerPhotonTest.cpp  RayTracerTest.cpp  RayTracerTest.tnhs  RefCountTests.cpp  SolarFurnace_normal.tnh  TCubeTests.cpp  TLightKitTests.cpp  TLightShapeTests.cpp  TSquareTests.cpp  TestsAuxiliaryFunctions.cpp  TestsAuxiliaryFunctions.h  TransformTests.cpp  Vector3DTests.cpp  gtest_main.cpp  tests.pro
(+6341 files in other folders)
