FILE(GLOB GEOMETRYLIBRARY ${PROJECT_SOURCE_DIR}/src/geometry/*.cpp)

ADD_LIBRARY(GEOMETRYLIBRARY SHARED  ${GEOMETRYLIBRARY})

INSTALL(TARGETS GEOMETRYLIBRARY DESTINATION bin)

SET_TARGET_PROPERTIES(GEOMETRYLIBRARY PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(GEOMETRYLIBRARY PUBLIC ${PROJECT_SOURCE_DIR}/src/geometry )

