FILE(GLOB NODELIBRARY ${PROJECT_SOURCE_DIR}/src/nodes/*.cpp)

ADD_LIBRARY(NODELIBRARY SHARED  ${NODELIBRARY})

INSTALL(TARGETS NODELIBRARY DESTINATION bin)

SET_TARGET_PROPERTIES(NODELIBRARY PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(NODELIBRARY PUBLIC ${PROJECT_SOURCE_DIR}/src/nodes
 ${PROJECT_SOURCE_DIR}/src/geometry )
 
target_link_libraries( NODELIBRARY GEOMETRYLIBRARY )
