ADD_SUBDIRECTORY(MaterialStandardSpecular)
ADD_SUBDIRECTORY(MaterialVirtual)
ADD_SUBDIRECTORY(PhotonMapExportToBinaryFile)
ADD_SUBDIRECTORY(RandomMersenneTwister)
ADD_SUBDIRECTORY(RandomRngStream)
ADD_SUBDIRECTORY(ShapeCone)
ADD_SUBDIRECTORY(ShapeCylinder)
ADD_SUBDIRECTORY(ShapeFlatDisk)
ADD_SUBDIRECTORY(ShapeFlatRectangle)
ADD_SUBDIRECTORY(ShapeFlatTriangle)
ADD_SUBDIRECTORY(ShapeParabolicDish)
ADD_SUBDIRECTORY(ShapeSphericalRectangle)
ADD_SUBDIRECTORY(ShapeTroughParabola)
ADD_SUBDIRECTORY(SunshapeBuie)
ADD_SUBDIRECTORY(SunshapePillbox)
ADD_SUBDIRECTORY(TrackerHeliostat)
ADD_SUBDIRECTORY(TrackerOneAxis)
ADD_SUBDIRECTORY(TrackerParabolicDish)
