FILE(GLOB RAYTRACINGLIBRARY ${PROJECT_SOURCE_DIR}/src/raytracing/*.cpp)

ADD_LIBRARY(RAYTRACINGLIBRARY SHARED  ${RAYTRACINGLIBRARY})

INSTALL(TARGETS RAYTRACINGLIBRARY DESTINATION bin)

SET_TARGET_PROPERTIES(RAYTRACINGLIBRARY PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(RAYTRACINGLIBRARY PUBLIC ${PROJECT_SOURCE_DIR}/src/raytracing )

target_link_libraries( RAYTRACINGLIBRARY GEOMETRYLIBRARY 
										NODELIBRARY 
										STATISTICSLIBRARY )