FILE(GLOB STATISTICSLIBRARY ${PROJECT_SOURCE_DIR}/src/statistics/*.cpp)

ADD_LIBRARY(STATISTICSLIBRARY SHARED  ${STATISTICSLIBRARY})

INSTALL(TARGETS STATISTICSLIBRARY DESTINATION bin)

SET_TARGET_PROPERTIES(STATISTICSLIBRARY PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories(STATISTICSLIBRARY PUBLIC ${PROJECT_SOURCE_DIR}/src/statistics )

